--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,111 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+ul{
+    list-style-type: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+a{
+    text-decoration: none;
+    color: #fff;
 }
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-weight: 400;
+    font-family: 'Poppins', sans-serif;
+}
+
+.container{
+    max-width: 1450px;
+    margin: auto;
+}
+
+h1{
+    font-size: 3.0rem;
+    line-height: 1.2;
+    font-weight: 500;
+}
+
+h2{ 
+    color: #fff;
+    font-size: 2.4rem;
+    line-height: 1.2;
+    font-weight: 600;
+}
+h4{
+    color: #C7C7C7; 
+    font-size: 1.5rem;
+    line-height: 1.2;
+    font-weight: 600; 
+}
+h5{
+    color: #fff;
+    font-size: 1.1rem;
+    line-height: 1.2;
+    font-weight: 600;
+}
+
+p{
+    font-size: 1.2rem;
+}
+
+.btn{
+    padding: 14px 32px;
+    border: 1px solid #0693e3;
+    background-color: #0693e3;
+    color: #fff;
+    border-radius: 24px;
+    font-size: 1.1rem;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+.btn:hover{
+    box-shadow: rgb(0 0 0 / 15%) 0px 8px 24px;
+}
+
+input{
+    padding: 12px 32px;
+    border: 1px solid var(--primary);
+    background: transparent;
+    border-radius: 24px 4px;
+    font-size: 1rem;
+    margin-right: 0.8rem;  
+}
+
+.product{
+    padding-top: 4rem;
+}
+
+
+@media screen and (max-width:768px){
+    h1{
+        font-size: 2.1rem;
+        line-height: 1.2;
+    }
+
+    h2{
+        font-size: 1.5rem;
+        line-height: 1.2;
+    }
+
+    h5{
+        font-size: 1.1rem;
+        line-height: 1.2;
+    }
+
+    p{
+        font-size: 1rem;
+    }
+
+    .btn{
+        width: 100%;
+        margin: 1rem 0;
+    }
+
+    input{
+        width: 100%;
+    }
+}
+
